Clean out index

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,55 +1,4 @@
 // Here's a little demo content to get y'all started...
 
 %section
-  %h1{style:'padding-top: 20%'}="Welcome to </br>Rails Girls!"
-
-
-%section
-  %p{:style => "padding-top: 200px;"} What is Ruby on Rails?
-
-%section
-  %p{style: 'font-size: 44px;'} Ruby on Rails is an open-source web framework that's optimized for programmer happiness and sustainable productivity.
-  %ul{style: 'margin-top: 8%;'}
-    %li Developed by David Heinemeier Hansson
-    %li First release in 2004
-
-%section
-  %h2 Ruby
-
-  %ul
-    %li Developed in Japan by Yukihiro Matsumoto (Matz)
-    %li First release in 1995
-    %li Natural, not simple
-    %li Inspired by Python, Perl, Lisp, & Smalltalk
-    %li="#11 on <a href='http://www.tiobe.com/index.php/content/paperinfo/tpci/index.html' target='_blank'>TIOBE's Programming CommunityIndex</a>"
-
-%section
-  %h2 why the lucky stiff
-
-  %ul
-    %li Artist who used code as his medium
-    %li Disappeared abruptly in 2009
-    %li="<a href='http://mislav.uniqpath.com/poignant-guide/' target='_blank'>Why's (poignant) Guide to Ruby</a>"
-    %li="<a href='http://hackety.com/' target='_blank'>Hackety Hack</a>"
-    %li="<a href='http://shoesrb.com/' target='_blank'>Shoes</a>"
-    %li="<a href='http://tryruby.org/' target='_blank'>Try Ruby</a>"
-
-%section
-  %h2{style: 'padding-top: 10%'} Tools of the Trade
-
-  %h3.icon.text-editor Text Editor
-
-  %h3.icon.terminal Terminal (Command Prompt)
-
-  %h3.icon.browser Web Browser
-
-%section
-  %p{:style => "padding-top: 200px;"} Make sure to ask lots of questions!
-
-%section
-  %h2 Credits
-
-  %ul
-    %li="<a href='http://www.slideshare.net/madrobby/ruby-on-rails-introduction'>Ruby on Rails Introduction by Thomas Fuchs</a>"
-    %li The Internet
-
+  %h1{style:'padding-top: 20%'}="WIP"
